--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,6 +18,7 @@ body {
     font-size: 2em;
     margin-bottom: 3%;
 }
+
 /* Dropdown Button */
 .dropbtn {
     background-color: #3498DB;
@@ -45,7 +46,7 @@ body {
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -58,7 +59,11 @@ body {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+    display: block;
+}
